# spacy-ebooks

./: .gitignore  CHANGELOG.md  LICENSE  NOTES.md  README.md  devenv.nix  pyproject.toml  requirements-llm.txt  requirements.txt  setup.cfg
llm/: fewshot-ner-falcon-7b-tuned.cfg  fewshot-ner-gpt-3.5.cfg  fewshot-ner-stablelm-tuned-alpha-3b.cfg  fewshot-textcat-gpt-3.5.cfg  llm_run.py
resources/: a-merritt_the-moon-pool_advanced.epub  abraham-merritt_the-moon-pool.epub3  gustave-flaubert_short-fiction.epub3  gustave-flaubert_short-fiction_m-walter-dunne_advanced.epub
src/spacy_ebooks/: __init__.py  book.py  corpus.py  llm.py  spacy.py
tests/: test_book.py  test_corpus.py  test_spacy.py
