[tool.poetry]
name = "spacy-ebooks"
version = "0.1.0"
description = ""
authors = ["Bor Hodošček <dev@bor.space>"]
readme = "README.md"
packages = [{include = "spacy_ebooks", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
EbookLib = "^0.17.1"
spacy = "^3.7.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
pydantic = "^1.10.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watcher = "^0.3.4"
pytest-testmon = "^1.2.2"
ipykernel = "^6.8.0"
xmltodict = "^0.12.0"
black = "^22.1.0"
loky = "^3.1.0"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
torch = {version = "^2.3.0+cpu", source = "pytorch-cpu"}
spacy-llm = {version = "^0.7.2" } # , extras = ["transformers"]}
transformers = {version = "^4.42.3", extras = ["sentencepiece"]}
accelerate = "^0.32.0"
einops = "^0.8.0"
xformers = "^0.0.26"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.0"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
